<resources>
    <string name="app_name">Reto 1 Nivel Intermedio</string>
    <string name="text_subrayado">Iniciar Sesión</string>
    <string name="text_checkbox">He leído y acepto los <u>Términos y condiciones</u> y <u>Políticas de Privacidad</u></string>
    <string name="subsignup">Registrarse</string>
    <string name="subrayadoCerrarSesion"><u>Cerrar Sesión</u></string>
    <string name="editTextTextPassword4">Introduzca Texto Aqui</string>
    <string name="editTextText2">Introduzca Texto Aqui</string>
    <string name="title_activity_menu_app">menuscrollcomp</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_recoleccion">Recolección</string>
    <string name="title_recordatorio">Recordatorio</string>
    <string name="title_perfil">Perfil</string>
    <string name="fondo_m">fondoM</string>
    <string name="imgclose">imgclose</string>
    <string name="h_bienvenida">hola bienvenida</string>
    <string name="holaB">¡Hola, bienvenidos (as)!</string>
    <string name="imgreciclaje">img reciclaje</string>
    <string name="textViewRactiv">En Recopuntos podras realizar diferentes actividades de organización, reutilización,  reciclaje y recolección de puntos para canjearlos por descuentos en productos.</string>
    <string name="textViewReco">RecoPuntos</string>
    <string name="textViewDV">¡No lo botes dale otra vida!</string>
    <string name="imgViewLDV">logoRecoP</string>
    <string name="imgViewRecoU">imgRecoU</string>
    <string name="textViewRecoU">Reco_Usuario</string>
    <string name="imgViewLReco">imgViewLReco</string>
    <string name="textViewRecopuntos">RecoPuntos</string>
    <string name="textViewquieres">Escoge que quieres reciclar hoy</string>
    <string name="imgViewAI">imgAI</string>
    <string name="textViewAI">Aceite Industrial</string>
    <string name="imgViewAC"> imgAC</string>
    <string name="textViewAC"> Aceite de Cocina</string>
    <string name="imgViewllantas"> imgllantas</string>
    <string name="textViewllantas">Llantas</string>
    <string name="imgViewbombillas"> imgbombillas</string>
    <string name="textViewbombillas">Bombillas</string>
    <string name="imgViewpyb"> imgpyb</string>
    <string name="textViewpyb">Pilas y Baterias</string>
    <string name="imgViewescom">imgescom</string>
    <string name="textViewescom">Escombros</string>
    <string name="imgViewdtextiles"> imgdtextiles</string>
    <string name="textViewdtextiles">Desechos Textiles</string>
    <string name="imgViewhomeB"> imghomeB</string>
    <string name="imgViewRecol"> imgRecol</string>
    <string name="imgViewRecord"> imgRecord</string>
    <string name="imgViewPerfil">imgPerfil</string>
    <string name="descripción_btnimg">Botón de mi imagen</string>
    <string name="descripción_editext1"></string>
    <string name="selecciona_mes">meses</string>
    <string name="mes_selecc">Mes</string>

    Spinner de las categorias
    <string-array name="material">
        <item>Seleccione una opcion</item>
        <item>Aceite Industrial</item>
        <item>Aceite de Cocina</item>
        <item>Llantas</item>
        <item>Bombillas</item>
        <item>Pilas y Baterias</item>
        <item>Escombros</item>
        <item>Desechos Textiles</item>

    </string-array>

    <string-array name="dia">
        <item>Seleccione una opcion</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="mes">
        <item>Seleccione una opcion</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>