<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3DD"
    tools:context="com.example.reto2.pantallapcategorias">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/imgViewRecoU"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/perfil_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="69dp"
        android:fontFamily="@font/inter"
        android:text="@string/textViewRecoU"
        android:textColor="#39932C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imgViewLReco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/logo5_2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter"
        android:text="@string/textViewRecopuntos"
        android:textColor="#0F4002"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <!-- scrollview con las categorias -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="322dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/merriweather_sans"
        android:text="@string/textViewquieres"
        android:textColor="#265144"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck" />

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#F4F3DD"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/categ_ai"
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewAI"
                            app:srcCompat="@drawable/ai_03" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewAI"
                            android:textAllCaps="false"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewAC"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewAC"
                            app:srcCompat="@drawable/ac1_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewAC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewAC"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F4F3DD"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewLL"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewllantas"
                            app:srcCompat="@drawable/llantasr_01_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewLL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewllantas"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewB"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewbombillas"
                            app:srcCompat="@drawable/bombillasr1_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewbombillas"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewPB"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewpyb"
                            app:srcCompat="@drawable/pilasybatr1_01" />

                        <TextView
                            android:id="@+id/textViewPB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewpyb"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewE"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewescom"
                            app:srcCompat="@drawable/escombrosr1_01" />

                        <TextView
                            android:id="@+id/textViewE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewescom"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewDT"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewdtextiles"
                            app:srcCompat="@drawable/rt1_04" />

                        <TextView
                            android:id="@+id/textViewDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/inter"
                            android:padding="5dp"
                            android:text="@string/textViewdtextiles"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barnav"
        style="@style/MyBottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/backg"
        app:itemIconTint="@drawable/fientecbarra"
        app:itemTextColor="@drawable/fientecbarra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>