<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2DC">


    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pantalla_estadistica" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="435dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recoestadistica" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="416dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/categorias_estadistica"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="107dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#7DC144"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/Home"
            android:layout_width="58dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewhomeB"
            app:srcCompat="@drawable/vector"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="117dp"
            android:layout_height="35dp"
            android:contentDescription="@string/imgViewRecol"
            app:srcCompat="@drawable/group_114"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="58dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewRecord"
            app:srcCompat="@drawable/fa_solid_calculator"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/iconoPerfilMenu"
            android:layout_width="76dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewPerfil"
            app:srcCompat="@drawable/vector__1_"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>