<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2DC">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calcular__pilas_y_baterias" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="420dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_117" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="403dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/frame_12__4_"
        tools:layout_editor_absoluteX="12dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#7DC144"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/Home"
            android:layout_width="58dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewhomeB"
            app:srcCompat="@drawable/vector__3_"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="117dp"
            android:layout_height="33dp"
            android:contentDescription="@string/imgViewRecol"
            app:srcCompat="@drawable/group_115"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="76dp"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewRecord"
            app:srcCompat="@drawable/fa_solid_calculator__2_"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/iconoPerfilMenu"
            android:layout_width="58dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewPerfil"
            app:srcCompat="@drawable/vector_2"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>